<resources>
    <string name="app_name">hc-store-ui</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">HOME</string>
    <string name="category_fragment_label">CATEGORIES</string>
    <string name="provider_fragment_label">FOURNISSEURS</string>
    <string name="product_fragment_label">PRODUCTS</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_message">Bienvenu sur HC STORE</string>
    <string name="todo">TODO</string>
    <string name="app_developped_message">Application developpé par H. AZZAOUI et C. BARDAA</string>
    <string name="app_developper_copyright_message"><b>© EMI 2023 all rights reserved.</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>