<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home_fragment_label"
            android:iconTint="@color/yellow_700" />
        <item
            android:id="@+id/categoryFragment"
            android:title="@string/category_fragment_label"
            android:iconTint="@color/yellow_700"/>
        <item
            android:id="@+id/fournisseurFragment"
            android:title="@string/provider_fragment_label"
            android:iconTint="@color/yellow_700"/>
        <item
            android:id="@+id/productFragment"
            android:title="@string/product_fragment_label"
            android:iconTint="@color/yellow_700"/>
    </group>

</menu>
